--- a/forgotpassword.css
+++ b/forgotpassword.css
@@ -35,7 +35,7 @@
  .forgot-password-container input[type="submit"] {
      width: 100%;
      padding: 10px;
-     background-color: #f15fcd;
+     background-color:#e4e1e1;
      border: none;
      border-radius: 5px;
      color: #fff;
