--- a/forgotpassword.css
+++ b/forgotpassword.css
@@ -12,7 +12,7 @@
     background-image: url("picture/Blissful beauty SALON(bckG2).ng");
         background-position: center;
         background-size: cover;
-     background-color: #d81717;
+     background-color:#e4e1e1;
      padding: 20px;
      border-radius: 10px;
      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -35,7 +35,7 @@
  .forgot-password-container input[type="submit"] {
      width: 100%;
      padding: 10px;
-     background-color:#e4e1e1;
+     background-color: #f15fcd;
      border: none;
      border-radius: 5px;
      color: #fff;
