--- a/forgotpassword.css
+++ b/forgotpassword.css
@@ -9,7 +9,7 @@
  }
 
  .forgot-password-container{
-    background-image: url("picture/Blissful beauty SALON(bckG2).ng");
+    background-image: url("https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/Blissful%20beauty%20SALON(bckG2).png");
         background-position: center;
         background-size: cover;
      background-color:#e4e1e1;
