--- a/registration.css
+++ b/registration.css
@@ -10,7 +10,7 @@ body {
 }
 
 .registration-container {
-    background-image: url("picture/Blissful beauty SALON(bckG2).png");
+    background-image: url("https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/Blissful%20beauty%20SALON(bckG2).png");
     background-color: #fff;
     padding: 30px;
     border-radius: 8px;
