--- a/welcome.css
+++ b/welcome.css
@@ -19,7 +19,7 @@
  
 
  .welcome-container {
-    background-image: url("picture/Blissful beauty SALON(bckG2).png");
+   background-image: url("https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/Blissful%20beauty%20SALON(bckG2).png");
         background-size: cover;
         background-position: center;
      background-color: #e65fda;
