--- a/services.css
+++ b/services.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #e3cde6;
-    background-image: url("picture/Blissful beauty SALON(bckG2).png");
+    background-image: url("https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/Blissful%20beauty%20SALON(bckG2).png");
     background-size: cover;
     background-position: center;
     color: #333;
