--- a/appointments.css
+++ b/appointments.css
@@ -33,7 +33,7 @@ body {
         }
 
         section#booking-form {
-            background-image: url("picture/Blissful beauty SALON(bckG2).png");
+background-image: url("https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/Blissful%20beauty%20SALON(bckG2).png");
             background-position: center;
             background-size: cover;
             max-width: 600px;
