--- a/specials.css
+++ b/specials.css
@@ -12,7 +12,7 @@ body {
 
 
 .specials-container {
-    background-image: url('picture/loyalty card .png');
+    background-image: url('https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/loyalty%20card%20.png');
     background-size: cover;
     background-position: center;
     background-color: #fff;
