--- a/reviews.css
+++ b/reviews.css
@@ -10,7 +10,7 @@
  }
 
  .review-container {
-    background-image: url("picture/Blissful beauty SALON(bckG2).png");
+    background-image: url("https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/Blissful%20beauty%20SALON(bckG2).png");
         background-position: center;
         background-size: cover;
      background-color: #fff;
