--- a/about.css
+++ b/about.css
@@ -37,7 +37,7 @@ nav ul li a {
 }
 
 section {
-    background-image: url("picture/Blissful beauty SALON(bckG2).png");
+    background-image: url("https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/Blissful%20beauty%20SALON(bckG2).png");
         background-position: center;
         background-size: cover;
     max-width: 1000px;
