--- a/paymentM.css
+++ b/paymentM.css
@@ -11,7 +11,7 @@
 
 
  .payment-container {
-    background-image: url("picture/Blissful beauty SALON(bckG2).png");
+    background-image: url("https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/Blissful%20beauty%20SALON(bckG2).png");
      background-color: #fff;
      padding: 20px;
      border-radius: 10px;
