--- a/appointments.css
+++ b/appointments.css
@@ -1,7 +1,7 @@
 body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
+            margin: 10px;
+            padding: 10px;
             background-color: #e3cde6;
             color: #333;
         }
@@ -33,12 +33,12 @@ body {
         }
 
         section#booking-form {
-background-image: url("https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/Blissful%20beauty%20SALON(bckG2).png");
+            background-image: url("https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/Blissful%20beauty%20SALON(bckG2).png");
             background-position: center;
             background-size: cover;
             max-width: 600px;
             margin: auto;
-            padding: 20px;
+            padding: 40px;
             background-color: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
