--- a/forgotpassword.css
+++ b/forgotpassword.css
@@ -1,19 +1,19 @@
  body {
-     font-family: Arial, sans-serif;
-     background-color: #e3cde6;
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     height: 100vh;
-     margin: 0;
+    font-family: Arial, sans-serif;
+    background-color:#e3cde6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
  }
 
  .forgot-password-container{
     background-image: url("https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/Blissful%20beauty%20SALON(bckG2).png");
-        background-position: center;
-        background-size: cover;
+    background-position: center;
+    background-size: cover;
      background-color:#e4e1e1;
-     padding: 20px;
+     padding: 30px;
      border-radius: 10px;
      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
      width: 300px;
@@ -25,15 +25,17 @@
  }
 
  .forgot-password-container input[type="email"] {
-     width: 100%;
-     padding: 10px;
-     margin: 10px 0;
-     border: 1px solid #ccc;
-     border-radius: 5px;
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
  }
 
  .forgot-password-container input[type="submit"] {
      width: 100%;
+     display: flex;
+    place-items: center;
      padding: 10px;
      background-color: #f15fcd;
      border: none;
