--- a/Dashboard.css
+++ b/Dashboard.css
@@ -42,7 +42,7 @@ body {
 }
 
 .hero {
-    background-image: url('/picture/Blissful\ beauty\ SALON\(bckG2\).png');
+    background-image: url("https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/Blissful%20beauty%20SALON(bckG2).png");
     position: absolute;
     top: 50%;
     left: 50%;
