--- a/appointments.css
+++ b/appointments.css
@@ -97,14 +97,9 @@ body {
         }
 
         footer {
-            background-color: #333;
-            color: #fff;
             text-align: center;
-            padding: 10px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+            padding: 20px;
+            background-color: #ffb6c1;
         }
-        
 
 
