--- a/about.css
+++ b/about.css
@@ -58,6 +58,12 @@ p {
     margin-bottom: 20px;
 }
 
+.x {
+    width: 100vw;
+    height: 110%;
+    z-index: -1;
+}
+
 footer {
     background-color: #333;
     color: #d0bcda;
