--- a/Dashboard.css
+++ b/Dashboard.css
@@ -91,7 +91,7 @@ button:hover {
 }
 
 .login-right {
-    background-image: url('/picture/Blissful\ beauty\ SALON\(bckG2\).png');
+    background-image: url('https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/Blissful%20beauty%20SALON(backgroud).png');
     width: 40%;
     background: rgba(255, 0, 0, 0.3);
     padding: 20px;
